@@ -2,6 +2,7 @@
 
 Detect missing files from the facebook download and error
 Detect unwritable files in the facebook data and error
+Exiftool uses a pool and reuses the same process where possible (speed improvement)
 
 0.8
 
